[tool.poetry]
name = "e-z accessibility map"
version = "1.0.0"
description = "Map of MTA E-ZPass Retailers with accessibility information for the MTA Open Data Challenge."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
folium = "^0.17.0"
pandas = "^2.2.3"
branca = "^0.8.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
